--- a/contribute.html
+++ b/contribute.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>The Learning Matrix</title>
+        <title>Contribute</title>
         <link rel="stylesheet" type="text/css" href = "style.css">
     </head>
     <body>
